[package]
name = "switch-button"
version = "0.1.0"
edition = "2024"
authors = ["Igor Akimov", "<igorakimy@gmail.com>"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0"
stm32f4xx-hal = {
    version = "0.23.0",
    features = ["stm32f446"]
}

[[bin]]
name = "switch-button"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"

[package.metadata.renode]
name = 'switch-button'
description = 'renode script that shows how to control switch buttons'
machine-name = 'NUCLEO-F446RE'
using-sysbus = true
renode = 'renode'
platform-descriptions = [
    '@platforms/boards/stm32f4_discovery-kit.repl',
    '@breadboard.repl',
]
pre-start-commands = [
    '''
    logLevel -1 gpioPortA.breadboardLED_Red
    logLevel -1 gpioPortA.breadboardLED_Blue
    logLevel -1 gpioPortB.breadboardLED_Yellow
    ''',
    'machine StartGdbServer 3333',
]
